# python-mi-for_chemical_engineering

./: cluster_numbers_gmm_2_full.csv  gtm_means_30_30_2_2_0.5_0.5_300.csv  pyproject.toml  ruff.toml  script.ipynb  x_selected_same_value.csv
dataset/: cluster_numbers_correlation.csv  eval_result.csv  eval_result0.csv  gapls_selected_x.csv  gapls_selected_x0.csv  gasvr_selected_hyperparameters.csv  gasvr_selected_x.csv  gavdspls_selected_x0.csv  gavdssvr_selected_hyperparameters.csv  gawlspls_selected_x.csv  gawlspls_selected_x0.csv  gawlssvr_selected_hyperparameters.csv  gawlssvr_selected_x.csv  interpolated_dataset.csv  outlier_sample_detection_results.csv  preprocessed_sample_spectra_dataset_w21_p2_d0.csv  preprocessed_sample_spectra_dataset_w21_p2_d1.csv  preprocessed_sample_spectra_dataset_w21_p2_d2.csv  similarity_matrix_correlation_clustering.csv  similarity_matrix_correlation_deleting.csv  x_averaged_correlation_clustering.csv  x_selected_correlation_clustering.csv  x_selected_same_value.csv
result/: boruta_X_filtered.csv  cluster_numbers_gmm_2_spherical.csv  cluster_numbers_gmm_2_spherical0.csv  cluster_numbers_sgtm_30_30_2_2_2.0_0.5_300.csv  cluster_numbers_sgtm_30_30_5_5_4_0.001_300.csv  cluster_probabilities_gmm_2_full.csv  cluster_probabilities_gmm_2_spherical.csv  cluster_probabilities_gmm_2_spherical0.csv  gapls_selected_x.csv  gavdspls_selected_x.csv  gavdssvr_selected_x.csv  gtm_means_30_30_2_2_0.5_0.5_300_0.csv  gtm_means_30_30_5_5_4_0.001_300.csv  gtm_modes_30_30_2_2_0.5_0.5_300.csv  gtm_modes_30_30_2_2_0.5_0.5_300_0.csv  tsne_score_perplexity_35.csv  (+10 more)
(+54 files in other folders)
