[project]
name = "python-mi-for-chemical-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dcekit>=2.14.1",
    "deap>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.11.5",
]
