[project]
name = "python-mi-for-chemical-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dcekit>=2.14.1",
    "deap>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "microsoft-python-type-stubs",
    "pandas-stubs>=2.2.3.250308",
    "pyarrow>=19.0.1",
    "ruff>=0.11.10",
    "scipy-stubs>=1.15.2.2",
    "types-seaborn>=0.13.2.20250111",
]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
